# bar_chart_race

./: README.md  author.md
source/: CMakeLists.txt
source/include/: animation_mgr.h  bar_chart.h
source/src/: animation_mgr.cpp  bar_chart.cpp  bcr.cpp
